@@ -1,5 +1,5 @@
 /*
- * $Id: wtext.c,v 1.51.2.2 2016/09/12 15:27:21 markisch Exp $
+ * $Id: wtext.c,v 1.51.2.3 2016/10/15 09:41:17 markisch Exp $
  */
 
 /* GNUPLOT - win/wtext.c */
@@ -57,6 +57,7 @@
 #include <windowsx.h>
 #include <commdlg.h>
 #include <commctrl.h>
+#include <tchar.h>
 
 #include "wgnuplib.h"
 #include "winmain.h"
@@ -979,44 +980,49 @@ TextMakeFont(LPTW lptw)
 
 
 static void
-TextSelectFont(LPTW lptw) {
+TextSelectFont(LPTW lptw)
+{
     LOGFONT lf;
     CHOOSEFONT cf;
     HDC hdc;
-    char lpszStyle[LF_FACESIZE];
-    LPSTR p;
+    LPTSTR p;
 
     /* Set all structure fields to zero. */
-    _fmemset(&cf, 0, sizeof(CHOOSEFONT));
-    _fmemset(&lf, 0, sizeof(LOGFONT));
+    memset(&cf, 0, sizeof(CHOOSEFONT));
+    memset(&lf, 0, sizeof(LOGFONT));
     cf.lStructSize = sizeof(CHOOSEFONT);
     cf.hwndOwner = lptw->hWndParent;
-    _fstrncpy(lf.lfFaceName,lptw->fontname,LF_FACESIZE);
-    if ( (p = _fstrstr(lptw->fontname," Bold")) != (LPSTR)NULL ) {
-	_fstrncpy(lpszStyle,p+1,LF_FACESIZE);
-	lf.lfFaceName[ (unsigned int)(p-lptw->fontname) ] = '\0';
+    _tcsncpy(lf.lfFaceName, lptw->fontname, LF_FACESIZE);
+    if ((p = _tcsstr(lptw->fontname, TEXT(" Bold"))) != NULL) {
+	lf.lfWeight = FW_BOLD;
+	lf.lfFaceName[p - lptw->fontname] = NUL;
+    } else {
+	lf.lfWeight = FW_NORMAL;
     }
-    else if ( (p = _fstrstr(lptw->fontname," Italic")) != (LPSTR)NULL ) {
-	_fstrncpy(lpszStyle,p+1,LF_FACESIZE);
-	lf.lfFaceName[ (unsigned int)(p-lptw->fontname) ] = '\0';
-    } else
-	_fstrcpy(lpszStyle,"Regular");
-    cf.lpszStyle = lpszStyle;
+    if ((p = _tcsstr(lptw->fontname, TEXT(" Italic"))) != NULL) {
+	lf.lfItalic = TRUE;
+	lf.lfFaceName[p - lptw->fontname] = NUL;
+    } else {
+	lf.lfItalic = FALSE;
+    }
+    lf.lfCharSet = DEFAULT_CHARSET;
     hdc = GetDC(lptw->hWndText);
     lf.lfHeight = -MulDiv(lptw->fontsize, GetDeviceCaps(hdc, LOGPIXELSY), 72);
     ReleaseDC(lptw->hWndText, hdc);
     lf.lfPitchAndFamily = FIXED_PITCH;
     cf.lpLogFont = &lf;
     cf.nFontType = SCREEN_FONTTYPE;
-    cf.Flags = CF_SCREENFONTS | CF_FIXEDPITCHONLY | CF_INITTOLOGFONTSTRUCT | CF_USESTYLE;
+    cf.Flags = CF_SCREENFONTS | CF_FIXEDPITCHONLY | CF_INITTOLOGFONTSTRUCT | CF_SCALABLEONLY;
+
     if (ChooseFont(&cf)) {
 	RECT rect;
-	_fstrcpy(lptw->fontname,lf.lfFaceName);
+
+	_tcscpy(lptw->fontname, lf.lfFaceName);
 	lptw->fontsize = cf.iPointSize / 10;
 	if (cf.nFontType & BOLD_FONTTYPE)
-	    lstrcat(lptw->fontname," Bold");
+	    _tcscat(lptw->fontname, TEXT(" Bold"));
 	if (cf.nFontType & ITALIC_FONTTYPE)
-	    lstrcat(lptw->fontname," Italic");
+	    _tcscat(lptw->fontname, TEXT(" Italic"));
 	TextMakeFont(lptw);
 	/* force a window update */
 	GetClientRect(lptw->hWndText, (LPRECT) &rect);
