@@ -17,6 +17,12 @@
 	text.  This reduces differences in text placement between GDI and GDI+
 	output.
 
+	* src/win/wgraph.c src/win/wtext.c:  Ensure proper initalisation of the
+	font chooser dialog also on non-english systems by using the LOGFONT
+	fields to request bold or italic fonts instead of using strings.
+	Request scalable fonts only, to ensure fonts can be scaled or rotated,
+	or offer (some) Unicode characters.
+
 2016-10-13  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/wxterminal/wxt_gui.cpp:  Screen refresh must hold mutex lock,
